--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>TagCloud</title>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src="node_modules/react/dist/react.js"></script>
+  <script src="node_modules/react-dom/dist/react-dom.js"></script>
+  <script src="node_modules/lodash/lodash.js"></script>
 </head>
 <body>
-
+  <div id="app"></div>
+  <script src="compiled/src/components/App.js"></script>
+  <script src="compiled/src/index.js"></script>
 </body>
 </html>
