--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
   <div id="app"></div>
   <script src="compiled/src/components/App.js"></script>
+  <script src="compiled/src/components/sidebar.js"></script>
+  <script src="compiled/src/components/featureList.js"></script>
+  <script src="compiled/src/components/featureListEntry.js"></script>
+  <script src="compiled/src/components/main.js"></script>
+  <script src="compiled/src/components/mainList.js"></script>
+  <script src="compiled/src/components/mainListEntry.js"></script>
   <script src="compiled/src/index.js"></script>
 </body>
 </html>
