--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
+  <link rel='stylesheet' href='lib/bootstrap.css'>
+  <link rel='stylesheet' href='lib/styles.css'>
 </head>
 <body>
   <div id="app"></div>
