Add/change title

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TagCloud</title>
+  <title>Money.io</title>
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   <link rel='stylesheet' href='lib/bootstrap.css'>
   <link rel='stylesheet' href='lib/styles.css'>
 </head>
