Complete spendingForm with basic functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-  <link rel='stylesheet' href='lib/bootstrap.css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
   <link rel='stylesheet' href='lib/styles.css'>
 </head>
 <body>
@@ -17,6 +18,7 @@
   <script src="compiled/src/components/App.js"></script>
   <script src="compiled/src/components/sidebar.js"></script>
   <script src="compiled/src/components/spending/spendingList.js"></script>
+  <script src="compiled/src/components/spending/spendingForm.js"></script>
   <script src="compiled/src/components/spending/spendingListEntry.js"></script>
   <script src="compiled/src/components/owes/owesList.js"></script>
   <script src="compiled/src/components/owes/owesListEntry.js"></script>
