--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="compiled/src/components/spending/spendingForm.js"></script>
   <script src="compiled/src/components/spending/spendingListEntry.js"></script>
   <script src="compiled/src/components/owes/owesList.js"></script>
+  <script src="compiled/src/components/owes/duesForm.js"></script>
+  <script src="compiled/src/components/owes/loansForm.js"></script>
   <script src="compiled/src/components/owes/owesListEntry.js"></script>
   <script src="compiled/src/index.js"></script>
 </body>
