Get server and database working

--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Money.io</title>
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/react/dist/react.js"></script>
-  <script src="node_modules/react-dom/dist/react-dom.js"></script>
-  <script src="node_modules/lodash/lodash.js"></script>
+  <script src="/node_modules/jquery/dist/jquery.js"></script>
+  <script src="/node_modules/react/dist/react.js"></script>
+  <script src="/node_modules/react-dom/dist/react-dom.js"></script>
+  <script src="/node_modules/lodash/lodash.js"></script>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
@@ -15,15 +15,15 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="compiled/src/components/App.js"></script>
-  <script src="compiled/src/components/sidebar.js"></script>
-  <script src="compiled/src/components/spending/spendingList.js"></script>
-  <script src="compiled/src/components/spending/spendingForm.js"></script>
-  <script src="compiled/src/components/spending/spendingListEntry.js"></script>
-  <script src="compiled/src/components/owes/owesList.js"></script>
-  <script src="compiled/src/components/owes/duesForm.js"></script>
-  <script src="compiled/src/components/owes/loansForm.js"></script>
-  <script src="compiled/src/components/owes/owesListEntry.js"></script>
-  <script src="compiled/src/index.js"></script>
+  <script src="/compiled/src/components/App.js"></script>
+  <script src="/compiled/src/components/sidebar.js"></script>
+  <script src="/compiled/src/components/spending/spendingList.js"></script>
+  <script src="/compiled/src/components/spending/spendingForm.js"></script>
+  <script src="/compiled/src/components/spending/spendingListEntry.js"></script>
+  <script src="/compiled/src/components/owes/owesList.js"></script>
+  <script src="/compiled/src/components/owes/duesForm.js"></script>
+  <script src="/compiled/src/components/owes/loansForm.js"></script>
+  <script src="/compiled/src/components/owes/owesListEntry.js"></script>
+  <script src="/compiled/src/index.js"></script>
 </body>
 </html>
