Add signup and signin redirection

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -40,6 +40,7 @@
 			                        </div>
 			                        <button type="submit" class="btn">Sign up</button>
 			                    </form>
+                                <br><a href='/signin'>Sign in</a>
 		                    </div>
                         </div>
                     </div>
