--- a/client/signin/index.html
+++ b/client/signin/index.html
@@ -41,6 +41,7 @@
 			                        </div>
 			                        <button type="submit" class="btn">Sign in</button>
 			                    </form>
+                                <br><a href='/signup'>Sign up</a>
 		                    </div>
                         </div>
                     </div>
